--- a/force-app/main/default/lwc/listOfUsers/listOfUsers.html
+++ b/force-app/main/default/lwc/listOfUsers/listOfUsers.html
@@ -1,4 +1,11 @@
 <template>
     <div class="aa">
-    <h1><b style="background-color: grey;  margin:1rem; padding:2rem;">List of users</b></h1></div>
+    <h1>List of users</h1>
+    <ul>
+        <li></li><br>
+        <li></li><br>
+        <li></li><br>
+
+    </ul>
+</div>
 </template>
