--- a/force-app/main/default/lwc/firstLWC/firstLWC.html
+++ b/force-app/main/default/lwc/firstLWC/firstLWC.html
@@ -1,6 +1,8 @@
 <template>
+    <div style="background-image: url('https://cdn.pixabay.com/photo/2023/01/26/18/09/zebra-7746719_640.jpg');">
     <i>hello world</i>
     welcome to vacanda
     black panther
     hakuna matata
+</div>
 </template>
