--- a/force-app/main/default/lwc/lds/lds.html
+++ b/force-app/main/default/lwc/lds/lds.html
@@ -12,6 +12,7 @@
 </body>
 </html-->
 <template>
+ 
   <div class="ba">
 <h1 class="has-text-centered has-text-primary"><b>Login Page</b></h1>
 
@@ -30,10 +31,12 @@
   <br>
   <div class="field is-grouped">
     <div class="control">
-      <button class="button is-link">Submit</button>
+      <input class="button is-link" type="submit" value="submit">
+      <!--button >Submit</button-->
     </div>
     <div class="control">
-      <button class="button is-link is-light">Reset</button>
+      <input class="button is-link is-light" type="reset" value="reset">
+      <!--button class="button is-link is-light">Reset</button-->
     </div>
   </div>
 </div>
