--- a/force-app/main/default/lwc/listOfUsers/listOfUsers.html
+++ b/force-app/main/default/lwc/listOfUsers/listOfUsers.html
@@ -1,6 +1,6 @@
 <template>
     <div class="bb">
-    <h1>List of User's</h1>
+    <h1>List of Users</h1>
     <!--lightning-card title="List of User's" class="aa"> 
     </lightning-card--> 
     <div class="cc">
