--- a/force-app/main/default/lwc/listOfUsers/listOfUsers.html
+++ b/force-app/main/default/lwc/listOfUsers/listOfUsers.html
@@ -5,7 +5,7 @@
     </lightning-card--> 
     <div class="cc">
       <template if:true={showuser} > 
-        the selected user is <strong>{selecteduser}</strong></br> 
+        the selected user is <strong>{selecteduser}</strong><br> 
         <lightning-button variant="brand" label="SaveUser" title="Primary action" onclick={handleSaveUserClick} class="slds-m-left_x-small"></lightning-button> 
       </template> 
       <template if:true={retriveduserName}> 
