--- a/force-app/main/default/lwc/lds/lds.html
+++ b/force-app/main/default/lwc/lds/lds.html
@@ -22,7 +22,7 @@
       <input class="input is-primary is-focused column is-half" type="email" placeholder="enter email">
     </div>
   </div>
-  <div >
+  <div class="field"  >
     <label class="label has-text-primary">Password</label>
     <div class="is-align-content-center">
       <input class="input is-primary is-focused column is-half" type="password">
